welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: value Black is not a member of object java.awt.Color
	var couleurSol = Color.Black
                               ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
    gauche()
          ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
      recule()
            ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
    if (getCouleurSol == Color.green) {
    ^