welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var couleurSol = Color.Black
	if (estFaceMur == true) {
    gauche()
  }
  else {
    avance()
    if (getCouleurSol == Color.green) {
      couleurSol = Color.green
      recule()
    }
  }
}